<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_person_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtFilter"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textTitle"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:gravity="center_vertical"
            android:text="@string/search_for" />

        <EditText
            android:id="@+id/txtFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTitle"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    <LinearLayout
        android:id="@+id/buttonBarDropArea"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtFilter"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/btnItemDelete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/label_delete"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>
    
        <ListView
            android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonBarDropArea" >
        </ListView>

</RelativeLayout>
